--- a/index.html
+++ b/index.html
@@ -33,24 +33,36 @@
             <a class="nav-link" href="about.html">關於小組</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="services.html">推薦影音平臺</a>
           </li>
-          <li class="nav-item">
+      <!--<li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+          </li>-->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Portfolio
+              類型
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+              <a class="dropdown-item" href="portfolio-1-col.html">搞笑</a>
+              <a class="dropdown-item" href="portfolio-2-col.html">熱血</a>
+              <a class="dropdown-item" href="portfolio-3-col.html">治癒</a>
+          <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
+          <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
           </li>
-          <li class="nav-item dropdown">
+		  <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              地區
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="portfolio-1-col.html">日本</a>
+              <a class="dropdown-item" href="portfolio-2-col.html">歐美</a>
+              <a class="dropdown-item" href="portfolio-3-col.html">中國</a>
+          <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
+          <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
+            </div>
+          </li>
+      <!--<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Blog
             </a>
@@ -59,8 +71,8 @@
               <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
               <a class="dropdown-item" href="blog-post.html">Blog Post</a>
             </div>
-          </li>
-          <li class="nav-item dropdown">
+          </li>-->
+      <!--<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Other Pages
             </a>
@@ -71,7 +83,7 @@
               <a class="dropdown-item" href="404.html">404</a>
               <a class="dropdown-item" href="pricing.html">Pricing Table</a>
             </div>
-          </li>
+          </li>-->
         </ul>
       </div>
     </div>
@@ -121,13 +133,13 @@
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4">Welcome to Modern Business</h1>
+    <h1 class="my-4">本網站讓你入坑的理由╰(*°▽°*)╯</h1>
 
     <!-- Marketing Icons Section -->
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">推薦影音平台</h4>
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
@@ -138,7 +150,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">分類功能</h4>
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
           </div>
@@ -149,7 +161,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">XXX</h4>
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
@@ -274,7 +286,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; 2020 AnimationPit</p>
     </div>
     <!-- /.container -->
   </footer>
