--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
         <div class="card h-100">
           <h4 class="card-header">推薦影音平台</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">
+		為你推薦現在最熱門的動畫影音平台。一個網頁多個平台，一次讓你找到想要的網址!</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
