--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
           <h4 class="card-header">推薦影音平台</h4>
           <div class="card-body">
             <p class="card-text">
-		為你推薦現在最熱門的動畫影音平台。一個網頁多個平台，一次讓你找到想要的網址!</p>
+		為你推薦現在最熱門的動畫影音平台。<br>一個網頁多個平台，一次讓你找到想要的網址!</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="services.html" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
@@ -153,21 +153,21 @@
         <div class="card h-100">
           <h4 class="card-header">分類功能</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
+            <p class="card-text">分為「類型」和「地區」兩種分類方式，讓你快速找到自己期待已久的動畫!</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="index.html" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">XXX</h4>
+          <h4 class="card-header">精心設計的UI介面</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">為你呈現簡潔整齊又美觀的畫面~<br>瀏覽網頁時保持好心情~</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="index.html" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
