--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!-- /.row -->
 
     <!-- Portfolio Section -->
-    <h2>Portfolio Heading</h2>
+    <h2>推薦動畫</h2>
 
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
