--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">關於小組</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">推薦影音平臺</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="services.html">推薦影音平台</a>
           </li>
       <!--<li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
