--- a/services.html
+++ b/services.html
@@ -152,7 +152,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; 2020 A</p>
     </div>
     <!-- /.container -->
   </footer>
