--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="about.html">關於小組</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">推薦影音平臺</a>
+            <a class="nav-link" href="services.html">推薦影音平台</a>
           </li>
       <!--<li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
