--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
         <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>-->
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+            <a href="#">None</a>
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
         <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>-->
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+            <a href="#">None</a>
           </div>
         </div>
       </div>
@@ -171,7 +171,7 @@
         <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>-->
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+            <a href="#">None</a>
           </div>
         </div>
       </div>
