--- a/blog-post.html
+++ b/blog-post.html
@@ -249,7 +249,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; 2020 AnimationPit</p>
     </div>
     <!-- /.container -->
   </footer>
