--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -212,7 +212,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; 2020 Animation</p>
+      <p class="m-0 text-center text-white">Copyright &copy; 2020 AnimationPit</p>
     </div>
     <!-- /.container -->
   </footer>
