--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -38,7 +38,7 @@
       <!--<li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>-->
-          <li class="nav-item dropdown ">
+          <li class="nav-item active dropdown ">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               類型
             </a>
@@ -101,7 +101,7 @@
       <li class="breadcrumb-item">
         <a href="index.html">Home</a>
       </li>
-      <li class="breadcrumb-item active">Portfolio 1</li>
+      <li class="breadcrumb-item active">搞笑</li>
     </ol>
 
     <!-- Project One -->
