--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -99,7 +99,7 @@
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
+        <a href="index.html">首頁</a>
       </li>
       <li class="breadcrumb-item active">搞笑</li>
     </ol>
