--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               類型
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="html-type/type-comedy.html">搞笑</a>
+              <a class="dropdown-item" href="type-comedy.html">搞笑</a>
               <a class="dropdown-item" href="portfolio-2-col.html">熱血</a>
               <a class="dropdown-item" href="portfolio-3-col.html">治癒</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
