--- a/type-passion.html
+++ b/type-passion.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>搞笑-類型-AnimationPit</title>
+  <title>熱血-類型-AnimationPit</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,25 +39,25 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>-->
           <li class="nav-item active dropdown ">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdowntype" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               類型
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item active" href="portfolio-1-col.html">搞笑</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">熱血</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">治癒</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdowntype">
+              <a class="dropdown-item" href="type-comedy.html">搞笑</a>
+              <a class="dropdown-item active" href="type-passion.html">熱血</a>
+              <a class="dropdown-item" href="type-healing.html">治癒</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
           </li>
 		  <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownregion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               地區
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">日本</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">歐美</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">中國</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownregion">
+              <a class="dropdown-item" href="region-Japan.html">日本</a>
+              <a class="dropdown-item" href="region-Western.html">歐美</a>
+              <a class="dropdown-item" href="region-China.html">中國</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
@@ -93,7 +93,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">搞笑
+    <h1 class="mt-4 mb-3">熱血
       <small>類型</small>
     </h1>
 
@@ -101,7 +101,7 @@
       <li class="breadcrumb-item">
         <a href="index.html">首頁</a>
       </li>
-      <li class="breadcrumb-item active">搞笑</li>
+      <li class="breadcrumb-item active">熱血</li>
     </ol>
 
     <!-- Project One -->
