--- a/services.html
+++ b/services.html
@@ -38,26 +38,26 @@
       <!--<li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>-->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item  dropdown ">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdowntype" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               類型
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">搞笑</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">熱血</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">治癒</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdowntype">
+              <a class="dropdown-item" href="type-comedy.html">搞笑</a>
+              <a class="dropdown-item" href="type-passion.html">熱血</a>
+              <a class="dropdown-item" href="type-healing.html">治癒</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
           </li>
 		  <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownregion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               地區
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">日本</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">歐美</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">中國</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownregion">
+              <a class="dropdown-item" href="region-Japan.html">日本</a>
+              <a class="dropdown-item" href="region-Western.html">歐美</a>
+              <a class="dropdown-item" href="region-China.html">中國</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
