--- a/services.html
+++ b/services.html
@@ -38,26 +38,26 @@
       <!--<li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>-->
-          <li class="nav-item  dropdown ">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdowntype" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               類型
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdowntype">
-              <a class="dropdown-item" href="type-comedy.html">搞笑</a>
-              <a class="dropdown-item" href="type-passion.html">熱血</a>
-              <a class="dropdown-item" href="type-healing.html">治癒</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="portfolio-1-col.html">搞笑</a>
+              <a class="dropdown-item" href="portfolio-2-col.html">熱血</a>
+              <a class="dropdown-item" href="portfolio-3-col.html">治癒</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
           </li>
 		  <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownregion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               地區
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownregion">
-              <a class="dropdown-item" href="region-Japan.html">日本</a>
-              <a class="dropdown-item" href="region-Western.html">歐美</a>
-              <a class="dropdown-item" href="region-China.html">中國</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="portfolio-1-col.html">日本</a>
+              <a class="dropdown-item" href="portfolio-2-col.html">歐美</a>
+              <a class="dropdown-item" href="portfolio-3-col.html">中國</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
@@ -94,7 +94,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">推薦影音平台
+    <h1 class="mt-4 mb-3">進擊的巨人 最終季
       <!--<small>Subheading</small>-->
     </h1>
 
@@ -102,44 +102,49 @@
       <li class="breadcrumb-item">
         <a href="index.html">首頁</a>
       </li>
-      <li class="breadcrumb-item active">推薦影音平台</li>
+      <li class="breadcrumb-item active">進擊的巨人 最終季</li>
     </ol>
 
     <!-- Image Header -->
-    <img class="img-fluid rounded mb-4" src="http://placehold.it/1200x300" alt="">
-
+    <img class="img-fluid rounded mb-4" src="https://i.ibb.co/tBJBnn6/9389adeb-31ca-489c-89ec-5ad709073250.jpg" //alt="9389adeb-31ca-489c-89ec-5ad709073250" border="0"//>
+    <!-- 簡介 -->
+          <h2>簡介</h2>
+          <p>《進擊的巨人》的故事描述百年前世界莫名出現神秘的巨人怪物，不斷殘忍食人，人類幾乎無法與之對抗，最後人類建造了三道寬 3 公尺、高 50 公尺的高聳圍牆，百年來未有巨人攻破，人們漸漸習慣牆內的生活，麻木於和平，害怕冒險與改變，直到 845 年，最外層的瑪利亞之牆，被身高超過 60m 的超大型巨人，踢破城牆，無數巨人湧入城鎮，親眼見到母親被巨人一口咬碎的慘劇的艾連，發誓要消滅所有巨人。<br>最後一季的劇情，主要是在描述艾倫一行人在發現了牆外不只有巨人，更有另一個發達許多的國家「瑪雷」後，將正式與人類開戰。故事時間軸將跳到了巨人 13 年任期將滿的五至六年後，新的瑪雷戰士不只已開始選拔，帕拉迪島上的艾倫更因為擁有始祖巨人，即將和世界各國展開前所未有的戰爭。</p>
     <!-- Marketing Icons Section -->
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">巴哈姆特動畫瘋</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text"></p>
+            <a href="https://imgbb.com/"></a><img class="img-fluid rounded mb-4" <img src="https://i.ibb.co/hKn9nys/image.png" alt="image" border="0"></a>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="https://ani.gamer.com.tw/animeVideo.php?sn=19849" class="btn btn-primary">點此前往</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">愛奇藝</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
+            <p class="card-text"></p>
+            <img class="img-fluid rounded mb-4" <img src="https://i.ibb.co/sWbQws4/image.png" alt="image" border="0"></a>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="https://tw.iqiyi.com/a_26ecr2hihid.html" class="btn btn-primary">點此前往</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Line TV</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text"></p>
+            <img class="img-fluid rounded mb-4" <a href="https://www.linetv.tw/drama/11801/eps/1?drama_id=11801&source=SEARCH_RESULT_PAGE"><img src="https://i.ibb.co/CWLwQqm/LINETV.png" alt="LINETV" border="0"></a>>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="https://www.linetv.tw/drama/11801/eps/1?drama_id=11801&source=SEARCH_RESULT_PAGE" class="btn btn-primary">點此前往</a>
           </div>
         </div>
       </div>
