--- a/services.html
+++ b/services.html
@@ -43,9 +43,9 @@
               類型
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">搞笑</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">熱血</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">治癒</a>
+              <a class="dropdown-item" href="type-comedy.html">搞笑</a>
+              <a class="dropdown-item" href="type-passion.html">熱血</a>
+              <a class="dropdown-item" href="type-healing.html">治癒</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
@@ -55,9 +55,9 @@
               地區
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">日本</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">歐美</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">中國</a>
+              <a class="dropdown-item" href="region-Japan.html">日本</a>
+              <a class="dropdown-item" href="region-Western.html">歐美</a>
+              <a class="dropdown-item" href="region-China.html">中國</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
