--- a/region-Western.html
+++ b/region-Western.html
@@ -42,10 +42,9 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdowntype" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               類型
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdowntype">
               <a class="dropdown-item" href="type-comedy.html">搞笑</a>
               <a class="dropdown-item" href="type-passion.html">熱血</a>
-              <a class="dropdown-item" href="type-healing.html">治癒</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
@@ -54,7 +53,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownregion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               地區
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownregiono">
               <a class="dropdown-item" href="region-Japan.html">日本</a>
               <a class="dropdown-item active" href="region-Western.html">歐美</a>
               <a class="dropdown-item" href="region-China.html">中國</a>
@@ -108,13 +107,13 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic8.iqiyipic.com/image/20200916/b3/58/a_100165744_m_601_m7_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project One</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3>小小兵</h3>
+        <p>童心未眠，小黃人攜萌友爆笑回歸。由環球攜手打造，照明娛樂呈獻的40支小黃人官方宣傳動畫“小黃人和萌友”獨家首播，傾情放送！看又壞又賤又蠢又萌的小黃人軍團如何耍寶，承包你的所有萌點！</p>
+        <a class="btn btn-primary" href="blog-post 1.html">View
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -127,13 +126,13 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic3.iqiyipic.com/image/20200916/7e/fd/a_100359898_m_601_m3_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Two</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3>大力水手 黑白版</h3>
+        <p>波比是一個水手。他有自己頑固的人生哲學，但是在七大洋的航行中，他的人生哲學受到了挑戰，以至於後來他問自己：我是什麼？但是在旅行中，他遇到了可愛的奧利弗，然後結伴一齊環球旅行。</p>
+        <a class="btn btn-primary" href="blog-post 2.html">View
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -146,13 +145,13 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic3.iqiyipic.com/image/20200916/7e/fd/a_100359898_m_601_m3_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Three</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3>馬古先生 阿拉伯之夜</h3>
+        <p>馬古先生全名叫做昆西·馬古，是一個矮個子的退休老頭，對事情很有遠見，但是情緒歇斯底里、頑固透頂，並且絕對不肯接收意見。他周圍的人和動物都認為他是個瘋子。</p>
+        <a class="btn btn-primary" href="blog-post 3.html">View 
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -166,13 +165,13 @@
 
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic2.iqiyipic.com/image/20191003/62/a8/a_100354764_m_601_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Four</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3>史努比(英)</h3>
+        <p>史努比這條世界上最可愛的小獵犬，成天幻想著遨翔天際，內心住著一個飛行王牌靈魂的他，將展開他的最大使命，飛上天空去追逐他的頭號剋星—紅色男爵，同時，他最好的朋友，查理布朗也開始了自己的終極任務</p>
+        <a class="btn btn-primary" href="blog-post 5.html">View
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
