--- a/type-passion.html
+++ b/type-passion.html
@@ -108,13 +108,13 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic3.iqiyipic.com/image/20200924/0c/c9/a_100400736_m_601_m7_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project One</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3>數碼寶貝大冒險</h3>
+        <p>《在數碼世界發生某些異常狀況之際，為了修復這些異常狀況，被選召的普遍人類。他們比其他人更早得到搭檔數碼獸，附加了「為了修復異常狀況而戰」的義務</p>
+        <a class="btn btn-primary" href="blog-post 15.html">View
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -127,13 +127,13 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic9.iqiyipic.com/image/20201201/ab/fd/a_100052075_m_601_zh-TW_m16_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Two</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3>航海王 One piece</h3>
+        <p>《擁有財富、名聲、勢力、擁有世界上的一切的「 海賊王 」哥爾‧D‧羅傑在即將遭到處刑前說了一段話：「 想要我的財寶嗎？想要的話可以全部給你。去找吧！我把所有的財寶都放在那裡！ 」後來世界上的人們將這個寶藏稱作「大祕寶」（ONE PIECE），為了爭奪大祕寶「ONE PIECE」，而先後爭相出海成為海賊，因此造就了「大海賊時代」。主角 蒙其‧D‧魯夫為了要實現與「紅髮」傑克的約定而出海，在遙遠的路途上找尋著志同道合的夥伴，進入「偉大的航道」，目標是得到「ONE PIECE」與成為「海賊王」。</p>
+        <a class="btn btn-primary" href="blog-post 14.html">View
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -146,13 +146,16 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://i.imgur.com/AemxpKt.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Three</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3>進擊的巨人</h3>
+        <p>《進擊的巨人》的故事描述百年前世界莫名出現神秘的巨人怪物，不斷殘忍食人，人類幾乎無法與之對抗，最後人類建造了三道寬 3 公尺、高 50 公尺的高聳圍牆，百年來未有巨人攻破，人們漸漸習慣牆內的生活，</p>
+
+        <p>麻木於和平，害怕冒險與改變，直到 845 年，最外層的瑪利亞之牆，被身高超過 60m 的超大型巨人，踢破城牆，無數巨人湧入城鎮，親眼見到母親被巨人一口咬碎的慘劇的艾連，發誓要消滅所有巨人。</p>
+
+        <a class="btn btn-primary" href="blog-post.html">View
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
@@ -166,13 +169,13 @@
 
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic9.iqiyipic.com/image/20201204/f8/bd/a_100104662_m_601_zh-TW_m19_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Four</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-        <a class="btn btn-primary" href="#">View Project
+        <h3>黑色五葉草</h3>
+        <p>曾經險些遭到魔神毀滅的世界，拯救它的是一位被後世稱為「魔法帝」的魔導士……兩位被遺棄在教堂的少年，一位是有卓越魔力跟魔法才能的四葉草魔導書的尤諾，另一位魔法值為零但卻意外獲得黑色五葉草的魔法書的阿斯塔……這是關於一位沒魔法能力的少年卻想要成為魔法帝的故事。</p>
+        <a class="btn btn-primary" href="blog-post 12.html">View
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
