--- a/blog-post 10.html
+++ b/blog-post 10.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>搞笑-類型-AnimationPit</title>
+  <title>動漫坑 AnimationPit</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,29 +35,29 @@
           <li class="nav-item">
             <a class="nav-link" href="services.html">推薦影音平台</a>
           </li>
-      <!--<li class="nav-item">
+         <!-- <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>-->
-          <li class="nav-item active dropdown ">
+          <li class="nav-item dropdown ">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdowntype" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               類型
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdowntype">
-              <a class="dropdown-item active" href="type-comedy.html">搞笑</a>
+              <a class="dropdown-item" href="type-comedy.html">搞笑</a>
               <a class="dropdown-item" href="type-passion.html">熱血</a>
               <a class="dropdown-item" href="type-healing.html">治癒</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
           </li>
-		  <li class="nav-item dropdown">
+		  <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownregion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               地區
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownregion">
               <a class="dropdown-item" href="region-Japan.html">日本</a>
               <a class="dropdown-item" href="region-Western.html">歐美</a>
-              <a class="dropdown-item" href="region-China.html">中國</a>
+              <a class="dropdown-item active" href="region-China.html">中國</a>
           <!--<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>-->
           <!--<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>-->
             </div>
@@ -89,124 +89,160 @@
     </div>
   </nav>
 
+
   <!-- Page Content -->
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">搞笑
-      <small>類型</small>
+    <h1 class="mt-4 mb-3">食戟之靈 第5季
+
     </h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
         <a href="index.html">首頁</a>
       </li>
-      <li class="breadcrumb-item active">搞笑</li>
+      <li class="breadcrumb-item active">食戟之靈 第5季</li>
     </ol>
 
     <div class="row">
 
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic2.iqiyipic.com/image/20191003/62/a8/a_100354764_m_601_260_360.jpg" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3>史努比(英)</h3>
-        <p>史努比這條世界上最可愛的小獵犬，成天幻想著遨翔天際，內心住著一個飛行王牌靈魂的他，將展開他的最大使命，飛上天空去追逐他的頭號剋星—紅色男爵，同時，他最好的朋友，查理布朗也開始了自己的終極任務</p>
-        <a class="btn btn-primary" href="blog-post 5.html">View
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
+      <!-- Post Content Column -->
+      <div class="col-lg-8">
 
-    <!-- Project One -->
-    <div class="row">
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic8.iqiyipic.com/image/20200916/b3/58/a_100165744_m_601_m7_260_360.jpg" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3>小小兵</h3>
-        <p>童心未眠，小黃人攜萌友爆笑回歸。由環球攜手打造，照明娛樂呈獻的40支小黃人官方宣傳動畫“小黃人和萌友”獨家首播，傾情放送！看又壞又賤又蠢又萌的小黃人軍團如何耍寶，承包你的所有萌點！</p>
-        <a class="btn btn-primary" href="blog-post 1.html">View
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
-    <!-- /.row -->
+        <!-- Preview Image -->
+        
+        <iframe width="560" height="325" 
+        src="http://tw.iqiyi.com/v_19rwsf8h7c.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
 
-    <hr>
+        <hr>
 
-    <!-- Project Two -->
-    <div class="row">
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic4.iqiyipic.com/image/20200916/9f/9c/a_100398542_m_601_m2_260_360.jpg" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3>食戟之靈 第5季</h3>
+        <!-- Date/Time -->
+        <h2>簡介</h2>
         <p>♥升上第一席的料理人鬥爭♥ ♥不管是食戟還是繪里奈都不能輸阿♥ 於家中的定食屋「幸平餐館」磨練料理手藝的幸平創真，受到父親的勸說來到了超菁英料理學校「遠月茶寮料理學園」入學。與勁敵之間的食戟、夥伴間的互相鑽研，作為料理人持續的成長著。時光流逝，升上2年級的創真終於爬上學園的頂點，遠月十傑評議會「第一席」的寶座！就在此時，遠月學園收到了世界級料理競賽「THE BLUE」的邀請函。然而，以「正統」聞名的美食大賽這次卻不太一樣，盡是一些脫離常軌的題目！？決定下一代料理界旗幟人物的食戟，即將展開！</p>
-        <a class="btn btn-primary" href="blog-post 10.html">View
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
+        <hr>
+
+        <!-- Post Content -->
+ 
+
+        <hr>
+
+        <h2>播放平台</h2>
+
+        <hr>
+        <a href="http://tw.iqiyi.com/v_19rwsf8h7c.html">愛奇藝</a>
+        <a href="https://gimy.tv/ep/33328-1-1.html">Gimy</a>
+        <a href="https://ani.gamer.com.tw/animeVideo.php?sn=13842">巴哈姆特</a>
+
+
+
+        <hr>
+
+        <!-- Comments Form -->
+        <div class="card my-4">
+          <h5 class="card-header">Leave a Comment:</h5>
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <textarea class="form-control" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+
+        <!-- Single Comment -->
+        <div class="media mb-4">
+          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <div class="media-body">
+            <h5 class="mt-0">路人甲</h5>
+            讚讚好看
+          </div>
+        </div>
+
+        <!-- Comment with nested comments -->
+        <div class="media mb-4">
+          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <div class="media-body">
+            <h5 class="mt-0">路人乙</h5>
+            普普其實
+            <div class="media mt-4">
+              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <div class="media-body">
+                <h5 class="mt-0">路人丙</h5>
+                你才普。。。。。。。。
+              </div>
+            </div>
+
+            <div class="media mt-4">
+              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <div class="media-body">
+                <h5 class="mt-0">路人丁</h5>
+                同感
+              </div>
+            </div>
+
+          </div>
+        </div>
+
       </div>
+
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-4">
+
+        <!-- Search Widget -->
+        <img class="img-fluid rounded" src="http://pic4.iqiyipic.com/image/20200916/9f/9c/a_100398542_m_601_m2_260_360.jpg" alt="">
+
+        <!-- Categories Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Categories</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="region-Japan.html">日本</a>
+                  </li>
+                  <li>
+                    <a href="region-western.html">歐美</a>
+                  </li>
+                  <li>
+                    <a href="region-China.html">中國</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="type-passion.html">熱血</a>
+                  </li>
+                  <li>
+                    <a href="type-healing.html">療癒</a>
+                  </li>
+                  <li>
+                    <a href="type-comedy.html">搞笑</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Side Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">youtube 搶先看</h5>
+          <div class="card-body">
+            <iframe width="280" height="160" 
+            src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+          </div>
+        </div>
+
+      </div>
+
     </div>
     <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Three -->
-    <div class="row">
-      <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic3.iqiyipic.com/image/20200916/7e/fd/a_100359898_m_601_m3_260_360.jpg" alt="">
-        </a>
-      </div>
-      <div class="col-md-5">
-        <h3>馬古先生 阿拉伯之夜</h3>
-        <p>馬古先生全名叫做昆西·馬古，是一個矮個子的退休老頭，對事情很有遠見，但是情緒歇斯底里、頑固透頂，並且絕對不肯接收意見。他周圍的人和動物都認為他是個瘋子。</p>
-        <a class="btn btn-primary" href="blog-post 3.html">View 
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Four -->
-
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Pagination -->
-    <ul class="pagination justify-content-center">
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
-        </a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">1</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">2</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">3</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
-        </a>
-      </li>
-    </ul>
 
   </div>
   <!-- /.container -->
