--- a/blog-post 13.html
+++ b/blog-post 13.html
@@ -113,7 +113,7 @@
         <!-- Preview Image -->
         
         <iframe width="560" height="325" 
-        src="http://tw.iqiyi.com/v_1ldgxrzd5kk.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        src="https://tw.iqiyi.com/v_1ldgxrzd5kk.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
 
         <hr>
@@ -132,7 +132,7 @@
         <h2>播放平台</h2>
 
         <hr>
-        <a href="http://tw.iqiyi.com/v_1ldgxrzd5kk.html">愛奇藝</a>
+        <a href="https://tw.iqiyi.com/v_1ldgxrzd5kk.html">愛奇藝</a>
         <a href="#">Gimy</a>
         <a href="#">巴哈姆特</a>
         
@@ -154,7 +154,7 @@
 
         <!-- Single Comment -->
         <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
           <div class="media-body">
             <h5 class="mt-0">路人甲</h5>
             讚讚好看
@@ -163,12 +163,12 @@
 
         <!-- Comment with nested comments -->
         <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
           <div class="media-body">
             <h5 class="mt-0">路人乙</h5>
             普普其實
             <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
               <div class="media-body">
                 <h5 class="mt-0">路人丙</h5>
                 你才普。。。。。。。。
@@ -176,7 +176,7 @@
             </div>
 
             <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <img class="d-flex mr-3 rounded-circle" src="https://placehold.it/50x50" alt="">
               <div class="media-body">
                 <h5 class="mt-0">路人丁</h5>
                 同感
@@ -192,7 +192,7 @@
       <div class="col-md-4">
 
         <!-- Search Widget -->
-        <img class="img-fluid rounded" src="http://pic2.iqiyipic.com/image/20201201/b7/98/a_100436959_m_601_zh-TW_260_360.jpg" alt="">
+        <img class="img-fluid rounded" src="https://pic2.iqiyipic.com/image/20201201/b7/98/a_100436959_m_601_zh-TW_260_360.jpg" alt="">
 
         <!-- Categories Widget -->
         <div class="card my-4">
