--- a/blog-post 25.html
+++ b/blog-post 25.html
@@ -232,7 +232,7 @@
           <h5 class="card-header">youtube 搶先看</h5>
           <div class="card-body">
             <iframe width="280" height="160" 
-            src="https://www.youtube.com/watch?v=RVO1G6KLeMA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            src="https://www.youtube.com/embed?v=RVO1G6KLeMA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
           </div>
         </div>
