--- a/type-passion.html
+++ b/type-passion.html
@@ -127,7 +127,7 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic9.iqiyipic.com/image/20201201/ab/fd/a_100052075_m_601_zh-TW_m16_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic9.iqiyipic.com/image/20201201/ab/fd/a_100052075_m_601_zh-TW_m16_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
@@ -169,7 +169,7 @@
 
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic9.iqiyipic.com/image/20201204/f8/bd/a_100104662_m_601_zh-TW_m19_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic9.iqiyipic.com/image/20201204/f8/bd/a_100104662_m_601_zh-TW_m19_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
