--- a/type-healing.html
+++ b/type-healing.html
@@ -108,7 +108,7 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic7.iqiyipic.com/image/20190920/2a/96/a_100100096_m_601_m16_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic7.iqiyipic.com/image/20190920/2a/96/a_100100096_m_601_m16_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
@@ -127,7 +127,7 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic4.iqiyipic.com/image/20180223/a2/bf/a_100126682_m_601_m8_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic4.iqiyipic.com/image/20180223/a2/bf/a_100126682_m_601_m8_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
@@ -146,7 +146,7 @@
     <div class="row">
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic0.iqiyipic.com/image/20180118/8b/9b/a_100042056_m_601_m5_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic0.iqiyipic.com/image/20180118/8b/9b/a_100042056_m_601_m5_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
@@ -166,7 +166,7 @@
 
       <div class="col-md-7">
         <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://pic7.iqiyipic.com/image/20200916/ef/69/a_100048848_m_601_m3_260_360.jpg" alt="">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://pic7.iqiyipic.com/image/20200916/ef/69/a_100048848_m_601_m3_260_360.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
